src/client/app.css
* {
  box-sizing: border-box;
}

.home-container {
  /* position: relative; */
  /* border: 4px solid black; */
  display: flex;
  flex-direction: column;
  height: 100vh;
  background: #f5f5f5;
}

.scrolling {
  background: red;
}

.header-fixed {
  position: fixed;
  width: 100%;
  display: flex;
  border: 2px solid orange;
  margin-top: -2px;
  z-index: 100;
  display: none;
}

.header-title-container {
  width: 33%;
  padding-left: 30px;
}

.header-link-container {
  flex: 1;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  border: 2px solid black;
}

.nav-link {
  padding-right: 120px;
  padding-left: 30px;
  text-decoration: none;
  color: black;
}

.column-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  /* height: 100%; */
  border: 3px solid green;
}

.left-side-container {
  /* width: 33%; */
  /* height: 100%;
  order: 1; */
  border: 2px solid blue;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
}

.start-container {
  /* padding-top: 50%; */
  overflow: auto;
}

.start-text-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.left-text-header {
  align-self: flex-start;
  margin-left: 50px;
  letter-spacing: 1px;
  font-size: 15px;
}

.left-text-header-underline {
  border-bottom: 2px solid black;
  padding-bottom: 20px;
}

.left-text-paragraph {
  margin-left: 50px;
  font-size: 20px;
  letter-spacing: 1px;
  line-height: 200%;
  margin-right: 50px;
}

.start-button {
  /* margin-left: 50%; */
  color: white;
  background-color: #2f4f4f;
  border-radius: 25px;
  letter-spacing: 1px;
  width: 200px;
  height: 50px;
}

.right-side-container {
  order: 2;
  flex: 1 1 50%;
  flex-grow: 1;
  border: 2px solid red;
  /* margin-top: 20px; */
  height: 100%;
  overflow-y: auto;
  display: none;
}

.grid-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  overflow-y: scroll;
}

.tile-container {
  flex: 1 1 48%;
  min-width: 420px;
  height: 50vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 2px solid green;
  /* background-image: url(""); */
}

.tile-text-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 20px;
}

.tile-text-header {
  letter-spacing: 1px;
  font-size: 12px;
  margin-top: 75px;
}

.tile-text-header-underline {
  border-bottom: 2px solid black;
  padding-bottom: 20px;
}

.questions-container {
  display: flex;
  flex-direction: column;
  /* height: 100vh; */
}

.questions-header-container {
  display: flex;
  justify-content: center;
  align-items: center;
  background: #f0fff0;
  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin-bottom: 20px;
  font-size: 32px;
  letter-spacing: 3px;
  height: 10%;
}

.questions-header-underline {
  border-bottom: 2px solid black;
  padding-bottom: 20px;
}

.questions-question-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 0 30px 20px 30px;
  padding: 30px;
  border-radius: 25px;
  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.scale-container {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
}

.scale {
  border: 1px solid black;
  border-radius: 25%;
  width: 50px;
  height: 50px;
  margin: 0 5px 0 5px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.is-hovered {
  background: rgba(47, 79, 79, 0.2);
}

.selected {
  background: #2f4f4f;
  color: white;
}

.questions-answers-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
}

.about-container {
  position: relative;
  height: 100vh;
  display: flex;
  flex-direction: row;
}

.about-tiles {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  width: 100%;
}

.about-photo {
  background: blue;
  height: 400px;
  border-radius: 50%;
}

.about-photo-description {
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px solid black;
  width: 100%;
}

.radar-chart-container {
  display: flex;
  flex-direction: column;
}

.radar-chart-results {
  border-radius: 25px;
  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin: 0 30px 20px 30px;
  padding: 30px;
}

.home-logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
  background: #f0fff0;
  height: 10%;
  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  margin-bottom: 20px;
  font-size: 32px;
  letter-spacing: 3px;
}

.mission-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 30px 20px 30px;
  padding: 30px;
  border-radius: 25px;
  /* height: 20%; */
  background: white;
  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  font-size: 16px;
  line-height: 20px;
  letter-spacing: 1px;
}

.mission-text-one {
  font-size: 22px;
}

.home-start-container {
  /* height: 20%; */
  /* background: #f5f5f5; */
}

.home-launch-container {
  background: white;
  margin: 0 30px 20px 30px;
  padding: 30px;
  border-radius: 25px;
  display: flex;
  flex-direction: column;
  /* justify-content: center;
  align-items: center; */
  box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  letter-spacing: 1px;
}

.home-disclaimer-container {
  background: #f5f5dc;
  padding: 30px;
  font-size: 12px;
}

.questions-back-button {
  /* margin-left: 50%; */
  color: white;
  background-color: #2f4f4f;
  border-radius: 25px;
  letter-spacing: 1px;
  width: 100px;
  height: 50px;
  /* margin: 30px 15px 0 0; */
}

.questions-next-finish-button {
  color: white;
  background-color: #2f4f4f;
  border-radius: 25px;
  letter-spacing: 1px;
  width: 100px;
  height: 50px;
  /* margin: 30px 0 0 15px; */
}

.questions-the-question-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 28px;
  letter-spacing: 1px;
}

.questions-type {
  margin: 0;
  font-size: 12px;
}

.questions-state-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* align-items: center; */
  border-radius: 25px;
  padding: 0 0 16px 0;
  width: 100%;
}

.progress-bar {
  position: relative;
  height: 20px;
  width: 50%;
  border-radius: 50px;
  border: 1px solid #333;
  margin: 0 0 16px 0;
}

.filler {
  background: #1da598;
  height: 100%;
  border-radius: inherit;
  transition: width 0.2s ease-in;
}

